2001-08-26  Yanko Kaneti <yaneti@declera.com>

	* POTFILES.in: update, according to recent changes
	remove: src/main.c, src/print.c, src/ui.c
	add: devhelp.desktop.in, src/books-dialog.c, src/bookshelf.c,
	src/devhelp-window.c, src/GNOME_DevHelp.oaf.in, src/install.c, 
	src/main.c, src/preferences.c

2001-08-14  Valek Filippov <frob@df.ru>

	* ru.po: added russian translation.

2001-08-12  gettextize  <bug-gnu-utils@gnu.org>

	* Makefile.in.in: Upgrade to gettext-0.10.39.

2001-08-02  gettextize  <bug-gnu-utils@gnu.org>

	* Makefile.in.in: Upgrade to gettext-0.10.38.

2001-08-01  Christian Meyer  <chrisime@gnome.org>

	* Changelog: Removed tons of gettext entries.
	* de.po: Added German translation.

2001-07-19  Johan Dahlin  <zilch.am@home.se>

	* sv.po: Updated swedish translation.
	
2001-07-15  Johan Dahlin  <zilch.am@home.se>

	* sv.po: Updated swedish translation.

2001-07-12  Johan Dahlin  <zilch.am@home.se>

	* sv.po: Updated swedish translation.

	* POTFILES.in: Added src/print.c src/ui.c.
	
2001-07-09  gettextize  <bug-gnu-utils@gnu.org>

	* Makefile.in.in: Upgrade to gettext-0.10.38.
	* stamp-cat-id: Remove file.

2001-07-09  Richard Hult  <rhult@codefactory.se>

	* .cvsignore: Add devhelp.pot.
